Fixes (#262)
* fix: removed scrollbar in all browsers in the TournamentList component

* fix: fix some styles issues

* fix: length of a set of cards in the TournamentList was not computed well

* fix: add padding to tournaments

* style: added some padding to the text on the left of the TournamentList

* fix: better text style for TournamentList

* fix: background on tournaments/* pages was doing cringy things

* fix: texts

* fix: padding style

---------

--- a/src/app/(dashboard)/admin/partners/style.module.scss
+++ b/src/app/(dashboard)/admin/partners/style.module.scss
@@ -18,5 +18,9 @@
         align-items: center;
         flex-wrap: wrap;
         gap: 2rem 3rem;
+
+        img {
+            max-width: 85%;
+        }
     }
 }
