--- a/src/components/Partners.module.scss
+++ b/src/components/Partners.module.scss
@@ -7,7 +7,7 @@
   padding-bottom: 4rem;
 
   img {
-    height: 100px;
+    height: 60px;
   }
 }
 
